Needed to reset to fix commits and large tscn files. Converted them to scn files to make them a binary and smaller. They can't be read by a text editor now, but all work will be done in Godot anyways.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Normalize EOL for all files that Git considers text files.
 * text=auto eol=lf
 game.glb filter=lfs diff=lfs merge=lfs -text
+house.glb filter=lfs diff=lfs merge=lfs -text
